fix text wrap on smaller iphones

--- a/themes/tria-2019/source/css/style.styl
+++ b/themes/tria-2019/source/css/style.styl
@@ -310,7 +310,7 @@ aside
     position relative
     width 200px
 
-    font-size 1.6rem
+    font-size 1.4rem
     font-weight 300
     line-height 2.4rem
     text-align center
@@ -333,6 +333,7 @@ aside
 
     @media screen and (min-width: 512px)
       float right
+      font-size 1.6rem
       width 480px
 
       & + p
